--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>WTJ-GitHubTest-王者荣耀官方网站-腾讯游戏</title>
+    <title>WTJ-GitHubTestV0.1-王者荣耀官方网站-腾讯游戏</title>
     <link rel="shortcut icon" href="imgs/favicon.ico">
     <link rel="stylesheet" href="./css/wzry.css"/>
     <link rel="stylesheet" href="./css/neck.css"/>
